--- a/Assignment-9/main.tex
+++ b/Assignment-9/main.tex
@@ -161,10 +161,13 @@ f_{XY}(x,y)=\frac{1}{\pi}e^{-x^2-y^2} \label{eq:counter}
 \end{align}
 \item
 \begin{align}
-\begin{pmatrix}
-aX\\
-bY
-\end{pmatrix}
+\begin{bmatrix}
+a&b
+\end{bmatrix}\cdot
+\begin{bmatrix}
+X\\
+Y
+\end{bmatrix}
 \sim N\brak{\begin{bmatrix}0\\0\end{bmatrix},\begin{bmatrix}a^2&\rho ab\\\rho ab&b^2\end{bmatrix}}
 \end{align}
 For correlated random variables $X$ and $Y$ in normal distribution, we have
