--- a/Assignment-9/main.tex
+++ b/Assignment-9/main.tex
@@ -261,7 +261,7 @@ $\therefore$ \textbf{Option(2) is correct}, A simulation for bivariate gaussian 
 \begin{figure}[H]
 \centering
 \includegraphics[width=\linewidth]{figure/plot}
-\caption{bivariate gaussian while 0 mean vector and null covariance matrix}
+\caption{bivariate gaussian while 0 mean vector and identity covariance matrix}
 \label{plot}
 \end{figure}
 \item
