--- a/Assignment-9/main.tex
+++ b/Assignment-9/main.tex
@@ -283,7 +283,10 @@ $\therefore$ \textbf{Option(2) is correct}, A simulation for bivariate gaussian 
 \label{plot}
 \end{figure}
 \item
-The counter example is \eqref{eq:counter}, the joint probability function is symmetric across all 4 quadrants
+\begin{align}
+\pr{X\le 0, Y\le0}=\frac{1}{4}
+\end{align}
+This doesn't imply independence, it can be true even for dependent $X$ and $Y$, the counter example is \eqref{eq:counter}, the joint probability function is symmetric across all 4 quadrants
 \begin{align}
 \therefore \pr{X\le 0, Y\le0}=\frac{1}{4}
 \end{align}
