--- a/Assignment-9/main.tex
+++ b/Assignment-9/main.tex
@@ -232,22 +232,21 @@ E[XY]=\int\limits_{-\infty}^{\infty}xf_X(x)\frac{1}{2}(x-x)dx=0
 \end{align}
 \item
 Defining the following matrices/vectors
-\begin{table}[htp]
+\begin{table}[h!]
 \centering
-    \resizebox{0.7\columnwidth}{25mm}{
-\begin{tabular}{ |c|c|c|} 
+\begin{tabular}{ |c|c|} 
 \hline
 \textbf{vector/matrix} & \textbf{expression} \\
-\hline\xrowht[()]{15pt}
-$\boldsymbol{Z}$& $\begin{pmatrix} X &Y\end{pmatrix}^\top$\\
-\hline\xrowht[()]{15pt}
-$\boldsymbol{C}$&$\begin{pmatrix} a &b\end{pmatrix}^\top$  \\
-\hline\xrowht[()]{15pt}
-$\boldsymbol{\mu}$&$\begin{pmatrix} 0 &0\end{pmatrix}^\top$  \\
-\hline\xrowht[()]{25pt}
-$\boldsymbol{\Sigma}$&$\begin{pmatrix}1&\rho\\\rho&1\end{pmatrix}$ \xrowht[()]{20pt}\\
+\hline&\\[-1em]
+$\boldsymbol{Z}$& $\begin{pmatrix} X &Y\end{pmatrix}^\top$\\[2pt]
+\hline&\\[-1em]
+$\boldsymbol{C}$&$\begin{pmatrix} a &b\end{pmatrix}^\top$  \\[2pt]
+\hline&\\[-1em]
+$\boldsymbol{\mu}$&$\begin{pmatrix} 0 &0\end{pmatrix}^\top$  \\[2pt]
+\hline&\\[-1em]
+$\boldsymbol{\Sigma}$&$\begin{pmatrix}1&\rho\\\rho&1\end{pmatrix}$ \\
 \hline
-\end{tabular}}
+\end{tabular}
 \caption{vectors/matrices and their expressions}
 \label{table1}
 \end{table}
