--- a/presentation-A9/main.tex
+++ b/presentation-A9/main.tex
@@ -87,7 +87,7 @@ A random vector $\boldsymbol{X}=\brak{X_1,X_2,...,X_n}^\top$ has a multivariate 
 \end{block}
 \begin{block}{marginal probability}
 \begin{align}
-f_X{x}=\int\limits_{-\infty}^{\infty}f_{XY}(xy)\,dy
+f_X(x)=\int\limits_{-\infty}^{\infty}f_{XY}(x,y)\,dy
 \end{align}
 \end{block}
 \end{frame}
